5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4322/executions/1861_2176.log
== TEST (2019-06-26 18:14:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
vetor = zeros((n,n), dtype=float)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:13) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
n = zeros((n,n), dtype=float)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:30) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
n = zeros((n,n), dtype=float)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
zeros((n,n), dtype=float)
print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:15:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
zeros((n,n), dtype=float)
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:16:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:20:52) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:21:27) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:22:20) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:16) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = array(input("dimensao da matriz: "))
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:23:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:02:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:08:36) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:10:58) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape(m)
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:11:01) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape(m)
for i in range(m):
	for j in range(m):
		if(i != j):
			x = max(shape(m[i,j]))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:19:49) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape[0]
for in range(m):
	for in range(m):
		
			
-- ERROR:
File "XXXX", line 5
    for in range(m):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:24:02) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape[0]
y = 0
maior = 0
for i in range(x):
	for j in range(x):
		if(i != j):
			if(m[i,j] > maior):
				maior = m[i,j]
print(maior)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:24:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape[0]
y = 0
maior = 0
for i in range(x):
	for j in range(x):
		if(i != j):
			if(m[i,j] > maior):
				maior = m[i,j]
print(maior)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:25:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape(m)[0]
y = 0
maior = 0
for i in range(x):
	for j in range(x):
		if(i != j):
			if(m[i,j] > maior):
				maior = m[i,j]
print(maior)
			
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 19:25:56) 
-- CODE:
from numpy import*
from numpy.linalg import*
m = array(eval(input("a matriz: ")))
x = shape(m)[0]
y = 0
maior = 0
for i in range(x):
	for j in range(x):
		if(i != j):
			if(m[i,j] > maior):
				maior = m[i,j]
print(maior)
			
			
-- EXECUTION TIME:
1.15128
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
40.0
---- user output:
40
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.89
---- user output:
0.89
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
98.9
---- user output:
98.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
